After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672201 - G_SPAWN_SEARCH_PATH should continue on ENODEV and ETIMEDOUT
G_SPAWN_SEARCH_PATH should continue on ENODEV and ETIMEDOUT
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2012-03-15 23:33 UTC by David Benjamin
Modified: 2012-03-16 15:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.01 KB, patch)
2012-03-15 23:33 UTC, David Benjamin
committed Details | Review

Description David Benjamin 2012-03-15 23:33:30 UTC
Created attachment 209896 [details] [review]
patch

The corresponding logic in glibc (or wherever this code originally came from; the comments are identical) now also continues the search on ENODEV and ETIMEDOUT to help handle networked filesystems like AFS. I've attached a patch to add the logic into the g_spawn_* APIs.

http://sourceware.org/git/?p=glibc.git;a=blob;f=posix/execvpe.c;hb=HEAD#l191
Comment 1 Colin Walters 2012-03-16 15:50:22 UTC
Makes sense, thanks for the patch!