Continue searching in PATH on ENODEV and ETIMEDOUT

Synchronize the error-handling logic from glibc. Users with networked
filesystems in their PATH may hit ETIMEDOUT.

https://bugzilla.gnome.org/show_bug.cgi?id=672201